[project]
name = "dbos"
dynamic = ["version"]
description = "Ultra-lightweight durable execution in Python"
authors = [
    {name = "DBOS, Inc.", email = "contact@dbos.dev"},
]
dependencies = [
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0.post0",
    "psycopg[binary]>=3.1", # Keep compatibility with 3.1--older Python installations/machines can't always install 3.2
    "websockets>=14.0",
    "typer-slim>=0.17.4",
    "sqlalchemy>=2.0.43",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]

[project.scripts]
dbos = "dbos.cli.cli:app"

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-exporter-otlp-proto-http>=1.37.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"
version_format = "version:format_version"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
filter_files = true
atomic = true

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-s"
log_cli_format = "%(asctime)s [%(levelname)8s] (%(name)s:%(filename)s:%(lineno)s) %(message)s"
log_cli_level = "INFO"
log_cli = true
timeout = 120 # Terminate any test that takes longer than 120 seconds

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "mypy>=1.15.0",
    "pytest-mock>=3.14.0",
    "types-PyYAML>=6.0.12.20240808",
    "black>=24.10.0",
    "pre-commit>=4.0.1",
    "isort>=5.13.2",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20240914",
    "pytz>=2024.2",
    "GitPython>=3.1.43",
    "confluent-kafka>=2.6.0",
    "types-confluent-kafka>=1.2.2",
    "flask>=3.0.3",
    "pytest-order>=1.3.0",
    "pdm-backend>=2.4.2",
    "pytest-asyncio>=0.25.0",
    "pyright>=1.1.398",
    "types-docker>=7.1.0.20241229",
    "pytest-timeout>=2.3.1",
    "inline-snapshot>=0.28.0",
    "uvicorn>=0.35.0",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
]
